--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,5 +1,5 @@
 {% extends "master.html" %}
 
 {% block left-column %}
-<h2>PageForest error: {{ strError }} ({{numError}}).</h2>
+<h2>Error: {{ strError }} ({{numError}}).</h2>
 {% endblock %}
