--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "master.html" %}
+{% block subTitle %}Community URL Sharing Service{% endblock %}
 {% block body %}
 Hello, World
 {% endblock %}
