--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -3,15 +3,21 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="/styles/g02me.css"/>
-<title>G02.ME - Community URL Sharing Service</title>
+<title>G02.ME - {% block subTitle %}{% endblock %}</title>
 </head>
 
 <body>
 
 {% block body %}{% endblock %}
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
-<script type="text/javascript">_uacct = "UA-2072869-2";urchinTracker();</script>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-5439059-1");
+pageTracker._trackPageview();
+</script>
 
 </body>
 </html>
