--- a/trunk/app/templates/error.html
+++ b/trunk/app/templates/error.html
@@ -1,5 +1,5 @@
 {% extends "master.html" %}
 
-{% block left-column %}
-<h2>Error: {{ strError }} ({{numError}}).</h2>
+{% block body %}
+<h2>Error: {{ strError }}.</h2>
 {% endblock %}
