--- a/trunk/app/templates/master.html
+++ b/trunk/app/templates/master.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-
 <head>
-<link rel="stylesheet" type="text/css" href="/styles/g02me.css"/>
+<link rel="stylesheet" type="text/css" href="/styles/main.css"/>
 <title>G02.ME - {% block subTitle %}{% endblock %}</title>
 </head>
-
 <body>
-
 {% block body %}{% endblock %}
-
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -18,6 +14,5 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-5439059-1");
 pageTracker._trackPageview();
 </script>
-
 </body>
 </html>
