--- a/app/templates/mapped.html
+++ b/app/templates/mapped.html
@@ -2,26 +2,8 @@
 <html>
 <head>
 <title>G02.ME - {{title}}</title>
-<script>
-function checkTopFrame()
-{
-	if (frames && frames[0] && frames[0].document)
-		{
-		try
-			{
-			frames[0].document.domain;
-			}
-		catch(e)
-			{
-			location = "/error";
-			}
-		self.setTimeout('checkTopFrame()', 3000);
-		}
-}
-self.setTimeout('checkTopFrame()', 3000);
-</script>
 </head><frameset rows="137,*">
-<frame src="/info?id={{id}}" scrolling=no marginwidth=0 marginheight=0 onload="var d = frames[0].document;var l = d.links[0];if (d.getElementById &&d.getElementById('logo')) {l = d.getElementById('logo');}l.target='_top';">
+<frame src="/info?id={{id}}" scrolling=no marginwidth=0 marginheight=0>
 <frame src="{{url}}">
 <noframes>Your browser does not support frames.  Your can visit the target page at {{ url }}</noframes>
 </frameset>
