dealing with unicode

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
 </p>
 <p>
 Drag this bookmarklet
-<a href="javascript:location.href='http://g02.me/map?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
+<a href="javascript:location.href='{{host}}map?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
 to your toolbar to share a G02.ME page directly from your browser.
 </p>
 </form>
