Unicode and fix urls

--- a/app/templates/mapped.html
+++ b/app/templates/mapped.html
@@ -3,7 +3,7 @@
 <head>
 <title>G02.ME - {{title}}</title>
 </head><frameset rows="137,*">
-<frame src="/info?id={{id}}" scrolling=no marginwidth=0 marginheight=0>
+<frame src="/+info?id={{id}}" scrolling=no marginwidth=0 marginheight=0>
 <frame src="{{url}}">
 <noframes>Your browser does not support frames.  Your can visit the target page at {{ url }}</noframes>
 </frameset>
