missed some url changes

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 {% block subTitle %}Community URL Sharing Service{% endblock %}
 {% block body %}
 <h1>G02.ME - Community URL Sharing Service</h1>
-<form action="/map" method="get">
+<form action="/+map" method="get">
 <p>
 <label for="url">URL:</label>
 <input type="text" name="url">
