--- a/trunk/app/styles/main.css
+++ b/trunk/app/styles/main.css
@@ -1,3 +1,31 @@
+body {
+margin: 2px;
+padding: 0;
+font-family: verdana, arial, sans-serif;
+color: #3d94b0;
+}
+
 input[type="text"] {
 width: 400px;
+}
+
+h1 {
+margin: 0;
+font-size: 24px;
+}
+
+a {
+color: #4cc6ed;
+}
+
+img.logo {
+width: 85px;
+height: 85px;
+float: left;
+margin-right: 10px;
+}
+
+div.ur {
+float: right;
+margin-left: 10px;
 }
