--- a/trunk/app/templates/master.html
+++ b/trunk/app/templates/master.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
 <title>G02.ME - {% block subTitle %}{% endblock %}</title>
+{% block head %}{% endblock %}
 </head>
 <body>
 {% block body %}{% endblock %}
