--- a/app/templates/mapped.html
+++ b/app/templates/mapped.html
@@ -2,9 +2,14 @@
 <html>
 <head>
 <title>G02.ME - {{title}}</title>
-</head><frameset rows="137,*">
-<frame src="/+info?id={{id}}" scrolling=no marginwidth=0 marginheight=0>
-<frame src="{{url}}">
-<noframes>Your browser does not support frames.  Your can visit the target page at {{ url }}</noframes>
+</head>
+<frameset rows="137,*">
+<frame src="/+info?id={{id}}" scrolling="no" marginwidth="0" marginheight="0"/>
+<frame src="{{url}}"/>
+<noframes>
+<body>
+Your browser does not support frames.  Your can visit the target page at {{ url }}
+</body>
+</noframes>
 </frameset>
 </html>
