--- a/trunk/app/styles/main.css
+++ b/trunk/app/styles/main.css
@@ -1,17 +1,14 @@
 body {
-margin: 2px;
+margin: 2px 8px;
 padding: 0;
 font-family: verdana, arial, sans-serif;
+font-size: 12px;
 color: #3d94b0;
-}
-
-input[type="text"] {
-width: 400px;
 }
 
 h1 {
 margin: 0;
-font-size: 24px;
+font-size: 18px;
 }
 
 a {
@@ -23,9 +20,18 @@ width: 85px;
 height: 85px;
 float: left;
 margin-right: 10px;
+border: 0;
 }
 
 div.ur {
 float: right;
 margin-left: 10px;
+}
+
+li {
+padding-bottom: 4px;
+}
+
+p {
+margin: 3px 0px;
 }
