--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,19 +3,19 @@
 {% block body %}
 <a target="_top" href="/"><img title="G02.ME" class="logo" src="/images/logo.png"></a>
 <h1 style="padding-top: 40px;">Community URL Sharing Service</h1>
-<p>
+<p style="clear:both;">
 Just drag this bookmarklet to your toolbar:
-<p style="margin-left: 200px;">
+</p>
+<p style="margin: 10px 200px;">
 <a style="font-size: 24px;" title="G02.ME Bookmarket - drag to your toolbar" href="javascript:location.href='{{host}}+map?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
 </p>
 <ul>
-<li>G02.ME is free for everyone - no need to create an account.</li>
-<li>Shrink the URL address of any web page to be just 18 characters or less (e.g. http://g02.me/xxxx)</li>
+<li>G02.ME is free for everyone - and no need to create an account.</li>
+<li>Shrink the URL address of any web page to be just 18 characters or less
+(e.g. <a title="G02.ME URL to Google.com" href="/G">http://g02.me/G)</a></li>
 <li>Send your new G02.ME URL to your friends in instant messages or twitter tweets.</li>
 <li>G02.ME will add a frame at the top of your shared page where you can exchange comments.</li>
-<li>See how ofter your page is being viewed - each G02.ME page displays the number of viewers
+<li>See how often your page is being viewed - each G02.ME page displays the number of viewers
 directly on the page.</li>
 </ul> 
-</p>
-</form>
 {% endblock %}
