--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,5 +1,6 @@
 {% extends "master.html" %}
 
 {% block body %}
+<a target="_top" href="/"><img title="G02.ME" class="logo" src="/images/logo.png"></a>
 <h2>Error: {{ strError }}.</h2>
 {% endblock %}
