Favicon link option and mime type settings...

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
+<link rel="icon" type="image/png" href="/images/favicon.png">
 <title>G02.ME - {% block subTitle %}{% endblock %}</title>
 {% block head %}{% endblock %}
 </head>
