--- a/trunk/app/templates/mapped.html
+++ b/trunk/app/templates/mapped.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
+<link rel="icon" type="image/png" href="/images/favicon.png">
 <title>G02.ME - {{title}}</title>
 </head>
 <frameset rows="137,*">
