--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,10 +4,10 @@
 <a target="_top" href="/"><img title="G02.ME" class="logo" src="/images/logo.png"></a>
 <h1 style="padding-top: 40px;">Community URL Sharing Service</h1>
 <p style="clear:both;">
-Just drag this bookmarklet to your toolbar:
+Just drag this bookmarklet to your toolbar*:
 </p>
 <p style="margin: 10px 200px;">
-<a style="font-size: 24px;" title="G02.ME Bookmarket - drag to your toolbar" href="javascript:location.href='{{host}}+map?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
+<a style="font-size: 24px;" title="G02.ME" href="javascript:location.href='{{host}}+map?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
 </p>
 <ul>
 <li>G02.ME is free for everyone - and no need to create an account.</li>
@@ -17,5 +17,15 @@ Just drag this bookmarklet to your toolbar:
 <li>G02.ME will add a frame at the top of your shared page where you can exchange comments.</li>
 <li>See how often your page is being viewed - each G02.ME page displays the number of viewers
 directly on the page.</li>
-</ul> 
+</ul>
+<i>
+Installation instructions for Internet Explorer:
+<ul>
+<li>Right click on the G02.ME link (above)</li>
+<li>Select "Add to Favorites..."</li>
+<li>Click "Yes" when you see the Security Alert.</li>
+<li>Select "Links" in the "Create In" dropdown.</li>
+<li>Click "Add"</li>
+</ul>
+</i>
 {% endblock %}
