checkpoint view and share counts

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,8 +11,8 @@ Just drag this bookmarklet to your toolbar*:
 </p>
 <ul>
 <li>G02.ME is free for everyone - and no need to create an account.</li>
-<li>Shrink the URL address of any web page to be just 18 characters or less
-(e.g. <a title="G02.ME URL to Google.com" href="/G">http://g02.me/G)</a></li>
+<li>Shrink the URL address of any web page to be just 15 characters (e.g. <a title="G02.ME URL to Google.com" href="/G">http://g02.me/G)</a>
+<br/><i>(for comparison, <a href="http://tinyurl.com">tinyurl.com</a> URLS are 25 characters long)</i></li>
 <li>Send your new G02.ME URL to your friends in instant messages or twitter tweets.</li>
 <li>G02.ME will add a frame at the top of your shared page where you can exchange comments.</li>
 <li>See how often your page is being viewed - each G02.ME page displays the number of viewers
