--- a/app/templates/mapped.html
+++ b/app/templates/mapped.html
@@ -6,10 +6,10 @@
 </head>
 <frameset rows="137,*">
 <frame src="/+info?id={{id}}" scrolling="no" marginwidth="0" marginheight="0"/>
-<frame src="{{url}}"/>
+<frame src="{{map.url}}"/>
 <noframes>
 <body>
-Your browser does not support frames.  Your can visit the target page at {{ url }}
+Your browser does not support frames.  Your can visit the target page at {{ map.url }}
 </body>
 </noframes>
 </frameset>
