--- a/trunk/app/templates/head.html
+++ b/trunk/app/templates/head.html
@@ -5,11 +5,11 @@
 {% block body %}
 <a target="_top" href="/"><img class="logo" src="/images/logo.png"></a>
 <div class="ur">
-<a target="_top" href="{{url}}">Close [x]</a>
-<p>Viewed: {{cViews}}</p>
-<p>Shared: {{cShared}}</p>
+<a target="_top" href="{{map.url}}">Close [x]</a>
+<p>Viewed: {{map.viewCount}}</p>
+<p>Shared: {{map.shareCount}}</p>
 </div>
-<h1><a target="_top" href="{{url}}">{{title|escape}}</a></h1>
+<h1><a target="_top" href="{{map.url}}">{{title|escape}}</a></h1>
 <p>{{url|escape}}</p>
 <div style="clear:both;width:700px;">
   <label for="comment">Comment: </label><input style="width:500px;" type="text" id="comment">&nbsp;<input type="button" value="Post">
