--- a/trunk/app/templates/head.html
+++ b/trunk/app/templates/head.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 {% block head %}
 {% endblock %}
-{% block subTitle %}{{title}}{% endblock %}
+{% block subTitle %}{{map.title}}{% endblock %}
 {% block body %}
 <a target="_top" href="/"><img class="logo" src="/images/logo.png"></a>
 <div class="ur">
@@ -9,8 +9,8 @@
 <p>Viewed: {{map.viewCount}}</p>
 <p>Shared: {{map.shareCount}}</p>
 </div>
-<h1><a target="_top" href="{{map.url}}">{{title|escape}}</a></h1>
-<p>{{url|escape}}</p>
+<h1><a target="_top" href="{{map.url}}">{{map.title|escape}}</a></h1>
+<p>{{map.url|escape}}</p>
 <div style="clear:both;width:700px;">
   <label for="comment">Comment: </label><input style="width:500px;" type="text" id="comment">&nbsp;<input type="button" value="Post">
   <br/><i>Example: "username: type your comment here [tag1, tag2, ...]"</i>
