--- a/trunk/app/templates/mapped.html
+++ b/trunk/app/templates/mapped.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="/images/favicon.png">
-<title>G02.ME - {{title}}</title>
+<title>G02.ME - {{map.title}}</title>
 </head>
 <frameset rows="137,*">
-<frame src="/+info?id={{id}}" scrolling="no" marginwidth="0" marginheight="0"/>
+<frame src="/+info?id={{map.GetId}}" scrolling="no" marginwidth="0" marginheight="0"/>
 <frame src="{{map.url}}"/>
 <noframes>
 <body>
