--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -1,12 +1,29 @@
 {% extends "master.html" %}
 {% block head %}
+<script>
+function Loaded()
+{
+	document.getElementById("comment").focus();
+	//window.onunload = function() {window.open("/+info?id={{map.GetId}}", "_blank");}
+}
+
+function CloseFrame()
+{
+	window.top.open("{{map.url}}");
+}
+
+function DeleteComment(id)
+{
+	alert("NYI");
+}
+</script>
 {% endblock %}
 {% block subTitle %}{{map.title}}{% endblock %}
 {% block body %}
 <a target="_top" href="/"><img class="logo" src="/images/logo.png"></a>
 
 <div class="ur">
-<a target="_top" href="{{map.url}}">Close [x]</a>
+<a target="_top" href="{{map.url}}">Close</a> <img class="x" onclick="CloseFrame();" src="/images/x.png"/>
 <p>Viewed: {{map.viewCount}}</p>
 <p>Shared: {{map.shareCount}}</p>
 <p>Comments: {{map.CommentCount}}</p>
@@ -18,12 +35,12 @@
 <div class="comments">
 {% for comment in comments %}
 	{% spaceless %}<p>
-    {% if comment.username %}<a href="/user/{{comment.username}}">{{comment.username}}</a>:{% endif %}{{comment.comment}}
+    {% if comment.username %}<a href="/user/{{comment.username}}">{{comment.username}}</a>:{% endif %}
+    {{comment.comment}}
     {% if comment.tags %}
-    	[
-    	{% for tag in comment.TagList %}<a href="/tag/{{tag}}">{{tag}}</a>{% if not forloop.last %},{% endif %}{% endfor %}
-    	]
+    	[{% for tag in comment.TagList %}<a href="/tag/{{tag}}">{{tag}}</a>{% if not forloop.last %},{% endif %}{% endfor %}]
     {% endif %}
+    <img class="x" onclick="DeleteComment({{comment.id}});" src="/images/x.png"/>
     </p>{% endspaceless %}
 {% endfor %}
 </div>
@@ -32,7 +49,7 @@
   <form action="/+comment" method="get">
   <input type="hidden" name="id" value="{{map.GetId}}"/>
   <label for="comment">Comment: </label>
-  <input style="width:500px;" type="text" name="comment">&nbsp;<input type="submit" value="Post"/>
+  <input style="width:500px;" type="text" id="comment" name="comment">&nbsp;<input type="submit" value="Post"/>
   <br/><i>Example: "username: type your comment here [tag1, tag2, ...]"</i>
   </form>
 </div>
