checkpoint - url mapping cleanup

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,7 @@
 Just drag this bookmarklet to your toolbar*:
 </p>
 <p style="margin: 10px 200px;">
-<a style="font-size: 24px;" title="G02.ME" href="javascript:location.href='{{host}}+map?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
+<a style="font-size: 24px;" title="G02.ME" href="javascript:location.href='{{host}}map/?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
 </p>
 <ul>
 <li>G02.ME is free for everyone - and no need to create an account.</li>
