--- a/app/templates/mapped.html
+++ b/app/templates/mapped.html
@@ -5,7 +5,7 @@
 <title>G02.ME - {{map.title}}</title>
 </head>
 <frameset rows="137,*">
-<frame src="/+info?id={{map.GetId}}" scrolling="no" marginwidth="0" marginheight="0"/>
+<frame src="/info/{{map.GetId}}" scrolling="no" marginwidth="0" marginheight="0"/>
 <frame src="{{map.url}}"/>
 <noframes>
 <body>
