--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,6 +8,7 @@
 
 
 <div class="left">
+
 <h2>Install the bookmarket</h2>
 <p>Just drag this bookmarklet to your toolbar*:</p>
 <p style="margin: 10px 100px;">
@@ -35,9 +36,10 @@
 </ul>
 </i>
 
-</div>
+</div> <!-- left -->
 
 <div class="right">
+
 <h2>Recently popular pages</h2>
 <table class="scores">
 <tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th></tr>
@@ -52,6 +54,12 @@
 	{% endif %}
 {% endfor %}
 </table>
+</div> <!-- right -->
+
+<div class="bottom">
+<a href="#">About Us</a> |
+<a href="#">Developers</a> |
+<a href="#">Terms of Service</a>
 </div>
 
 </div>
