--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -18,9 +18,10 @@
 <h2>What is G02.ME?</h2>
 <ul>
 	<li>G02.ME is free URL shortening service - use it to turn any URL into a short one.</li>
-	<li>G02.ME URL's are only 16 characters long - perfect for embedding in <a href="http://twitter.com">Twitter</a> or IM
+	<li>G02.ME URL's are only 16 characters long <i>(for comparison, tinyurl URL's are 25 characters long)</i> -
+	perfect for embedding in <a href="http://twitter.com">Twitter</a> or IM messages
 	(e.g., <a href="http://g02.me/G">http://g02.me/G</a>)
-	<br/><i>(for comparison, tinyurl URL's are 25 characters long)</i></li>
+	</li>
 	<li>Exchange comments at the top of any shared G02.ME page.</li>
 	<li>Each G02.ME page displays the number of viewers	so you can see how often your link has been viewed.</li>
 </ul>
