Remove broken links

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -8,8 +8,8 @@
 
 
 <div class="left">
-Welcome, {{ user.nickname }}
-
+<h2>Welcome, {{ user.nickname }}</h2>
+<a href="/admin/clean-broken">Remove Broken Scores</a>
 </div> <!-- left -->
 
 <div class="right">
