Links to Google Code site

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -37,6 +37,12 @@
 </ul>
 </i>
 
+<div style="text-align:center;">
+<a href="http://code.google.com/p/g02me/">
+<img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif"
+alt="Powered by Google App Engine" /></a>
+</div>
+
 </div> <!-- left -->
 
 <div class="right">
@@ -58,9 +64,9 @@
 </div> <!-- right -->
 
 <div class="bottom">
-<a href="#">About Us</a> |
-<a href="#">Developers</a> |
-<a href="#">Terms of Service</a>
+<a href="http://code.google.com/p/g02me/">About Us</a> |
+<a href="http://code.google.com/p/g02me/wiki/API">Developers</a> |
+<a href="http://code.google.com/p/g02me/wiki/License">Terms of Service</a>
 </div>
 
 </div>
