--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,7 @@
 
 <div class="left">
 
-<h2>Install the bookmarket</h2>
+<h2>Install the bookmarklet</h2>
 <p>Just drag this bookmarklet to your toolbar*:</p>
 <p style="margin: 10px 100px;">
 <a style="font-size: 24px;" title="G02.ME" href="javascript:location.href='{{host}}map/?url='+encodeURIComponent(location)+'&title='+encodeURIComponent(document.title);">G02.ME</a>
@@ -64,9 +64,9 @@ alt="Powered by Google App Engine" /></a>
 </div> <!-- right -->
 
 <div class="bottom">
-<a href="http://code.google.com/p/g02me/">About Us</a> |
+<a href="http://code.google.com/p/g02me/wiki/AboutUs">About Us</a> |
 <a href="http://code.google.com/p/g02me/wiki/API">Developers</a> |
-<a href="http://code.google.com/p/g02me/wiki/License">Terms of Service</a>
+<a href="http://code.google.com/p/g02me/wiki/TermsOfService">Terms of Service</a>
 </div>
 
 </div>
