--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -38,7 +38,7 @@ window.onclick = Click;
 <p>Comments: {{map.CommentCount}}</p>
 <p>Tags: 
 {% for tag in TopTags %}
-	<a target="_top" href="/tag/{{tag|slugify}}">{{tag|escape}}</a>{% if not forloop.last %}, {% endif %}
+	<a target="_top" href="/tag/{{tag}}">{{tag|escape}}</a>{% if not forloop.last %}, {% endif %}
 {% endfor %}
 </p>
 </div>
@@ -61,7 +61,7 @@ window.onclick = Click;
     {% if comment.username %}<a target="_top" href="/user/{{comment.username}}">{{comment.username|escape}}</a>:{% endif %}
     {{comment.comment|escape|urlize}}
     {% if comment.tags %}
-    	[{% for tag in comment.TagList %}<a target="_top" href="/tag/{{tag|slugify}}">{{tag|escape}}</a>{% if not forloop.last %}, {% endif %}{% endfor %}]
+    	[{% for tag in comment.TagList %}<a target="_top" href="/tag/{{tag}}">{{tag|escape}}</a>{% if not forloop.last %}, {% endif %}{% endfor %}]
     {% endif %}
     <img class="x" onclick="DeleteComment({{comment.key.id}});" src="/images/x.png"/>
     </p>{% endspaceless %}
