--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
 
 <a target="_top" href="/"><img title="G02.ME" class="logo" src="/images/logo.png"></a>
 <h1 style="padding-top: 35px;">A URL Shortening Service</h1>
-<p>Shorten, Share, and Comment - Then see what other are doing</p>
+<p>Shorten, Share, and Comment - then see what others are doing</p>
 
 <div class="left">
 
