--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,7 +25,8 @@
 	<li>Exchange comments at the top of any shared G02.ME page.</li>
 	<li>Each G02.ME page displays the number of viewers	so you can see how often your link has been viewed.</li>
 	<li>Pick a username, and use it with all your comments.  You can then get a summary of all your most recently shared pages.</li>
-	<li>Add a tag, and then click on the tag link to see the most popular URL's for that tag - it's a great way to find our what others are finding.</li>
+	<li>Add a tag, and then click on the tag link to see the most popular URL's for that tag -
+	it's a great way to find out what others are sharing.</li>
 </ul>
 
 <i>
