--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,7 +6,7 @@
 <h1 style="padding-top: 40px;">{{username}}'s Recently shared and commented Pages</h1>
 <div style='clear:both;'></div>
 <table class="scores">
-<tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th style="width:12em;">Created</th></tr>
+<tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th></tr>
 {% for comment in comments %}
 	<tr>
 		<td><a href="/{{comment.map.GetId}}">{{comment.map.title|escape}}</a>
@@ -21,7 +21,7 @@
 		<td class="num">{{comment.map.shareCount}}</td>
 		<td class="num">{{comment.map.viewCount}}</td>
 		<td class="num">{{comment.map.CommentCount}}</td>
-		<td>{{comment.map.Age}}</td>
+		<td class="age">{{comment.map.Age}}</td>
 	</tr>
 {% endfor %}
 </table>
